fixd footer and spacing. added github link

--- a/Stats preview card component/style.scss
+++ b/Stats preview card component/style.scss
@@ -31,7 +31,7 @@ $para_clr: hsla(0, 0%, 100%, 0.75);
 $stat_heading_clr: hsla(0, 0%, 100%, 0.6);
 
 .stats{
-      display: flex;
+      display: inline-flex;
       justify-content: space-between;
       flex-direction: column;
     div{
@@ -130,12 +130,14 @@ footer {
     position: relative;
     bottom:0;
     text-align: center;
-    width: 100vw;
     height: .9375rem;
 }
 @media screen and (min-width: $xs) {
     .stats {
         flex-direction: row;
+        justify-content: space-between;
+        width:100%;
+        
         
     }
     
@@ -147,25 +149,20 @@ footer {
        
         > div {
             margin-right: 4rem;
-
-         
          }
     }
     .card {
         flex-direction: row-reverse;
-        // max-width: 69.375rem;
         
     }
 
     
     .card-details{
         margin:4.5rem;
-        margin-bottom: 3rem;
-        margin-top: 4.875rem;
+        margin-bottom: 4.1875rem;
+        margin-top: 4.1875rem;
         text-align: left;
      
-        max-width: 44ch;
-        width:100%;
         p{
             margin-bottom:2.625rem;
             margin-top:1.625rem;
